# safety-agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup_project.sh  test_agent.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agent/: __init__.py  api.py  cli.py  core.py  llm_service.py
test_data/: safe_requirements.txt  unsafe_requirements.txt
